--- a/SIHBackend/StudyInIndia/templates/StudyInIndia/scholarship.html
+++ b/SIHBackend/StudyInIndia/templates/StudyInIndia/scholarship.html
@@ -61,28 +61,30 @@
               <h2><b>General Cultural Scholarship Scheme (GCSS)</b></h2>
               <p>Scholarships are awarded under this scheme (GCSS) annually to international students belonging to certain Asian, African and Latin American countries for the undergraduate, postgraduate degrees and for pursuing research at Indian universities. However, scholarships for medical studies for MBBS, BDS or for medical research leading to a Ph.D. degree are not offered under the GCSS scheme. A list of countries covered under the GCSS is given below:
               <br><br>
-              Afghanistan, Barbados, Botswana, Cambodia, Cameroon, Ethiopia, Fiji, Gambia, Guyana, Indonesia, Iran, Iraq, Jamaica, Jordan, Kazakhstan, Kenya, Laos, Lesotho, Maldives, Mauritius, Myanmar, Malawi, Namibia, Nepal, Palestine, Russia, Saudi Arabia, Senegal, Somalia, South Africa, Republic of Ireland, Sri Lanka, Syria, Seychelles, Sudan, Tanzania, Thailand, Trinidad and Tobago, Uganda, Uzbekistan, UAE, Vietnam, Yemen, Zaire, Zambia. Zimbabwe.</p> 
+              Afghanistan, Barbados, Botswana, Cambodia, Cameroon, Ethiopia, Fiji, Gambia, Guyana, Indonesia, Iran, Iraq, Jamaica, Jordan, Kazakhstan, Kenya, Laos, Lesotho, Maldives, Mauritius, Myanmar, Malawi, Namibia, Nepal, Palestine, Russia, Saudi Arabia, Senegal, Somalia, South Africa, Republic of Ireland, Sri Lanka, Syria, Seychelles, Sudan, Tanzania, Thailand, Trinidad and Tobago, Uganda, Uzbekistan, UAE, Vietnam, Yemen, Zaire, Zambia. Zimbabwe.<br><br>
+              <a href="http://www.iccr.gov.in/content/general-scholarships-scheme-gss">Read more</a><br><br></p> 
             </li>
 
             <li class="reason">
               <h2><b>Cultural Exchange Programme</b></h2>
               <p>
-                Every year <a href="https://archive.india.gov.in/outerwin.php?id=http://www.iccrindia.net/" style="color: BLUE;" target="_blank">The Indian Council for Cultural Relations</a>(ICCR) administers scholarships international students according to the terms and conditions of the Cultural Exchange Programme signed between the Government of India and the Government of the respective country for studying, training and research in various fields. At present India has Cultural Exchange Programmes with the following countries:
+                Every year <a href="https://archive.india.gov.in/outerwin.php?id=http://www.iccrindia.net/">The Indian Council for Cultural Relations</a>(ICCR) administers scholarships international students according to the terms and conditions of the Cultural Exchange Programme signed between the Government of India and the Government of the respective country for studying, training and research in various fields. At present India has Cultural Exchange Programmes with the following countries:
                 <br><br>
                 Australia, Algeria, Argentina, Afghanistan, Bangladesh, Bulgaria, Belgium, Bahrain, Colombia, Cyprus, China, Czech, Ethiopia, Finland, France, Germany, Ghana, Greece, Hungary, Iran, Iraq, Israel, Italy, Japan, Jordan, Kazakhstan, Kenya, Kuwait, Kyrghyzstan, Mongolia, Myanmar, Maldives, Mauritius, Malaysia, Mexico, Mali, Netherlands, Nigeria, North Korea, Norway, Pakistan, Philippines, Portugal, Poland, Romania, Russia, Rwanda, Slovakia, Spain, Sweden, South Korea, Senegal, Sudan, Syria, Somalia, Sri Lanka, Thailand, Tunisia, Turkey, Turkmenistan, Uganda, United Arab Emirates (UAE), United Arab Republic (Egypt), Uzbekistan, Vietnam, Yemen, Zaire, Zimbabwe.
+                <br><br>
               </p> 
             </li>
 
             <li class="reason">
               <h2><b>Commonwealth Fellowship Plan</b></h2>
-              <p>Scholarships and fellowships are offered annually under this scheme to candidates from Commonwealth countries mainly for postgraduate studies, though a few awards may be made available for undergraduate studies in those disciplines for which adequate facilities may not exist in the applicants' country. Short duration scholarships are also available under this scheme for scholars wishing to collect material for conducting research projects back home. </p> 
+              <p>Scholarships and fellowships are offered annually under this scheme to candidates from Commonwealth countries mainly for postgraduate studies, though a few awards may be made available for undergraduate studies in those disciplines for which adequate facilities may not exist in the applicants' country. Short duration scholarships are also available under this scheme for scholars wishing to collect material for conducting research projects back home.<br><br><a href="http://www.iccr.gov.in/content/commonwealth-scholarships">Read More</a><br><br> </p> 
             </li>
 
             <li class="reason">
               <h2><b>Reciprocal Scholarships Scheme</b></h2>
               <p>Candidates wishing to do postgraduate study or research in any subject, for whom facilities exist in India, may apply for a scholarship under this scheme. Applicants wanting to study or wishing to specialise in Indian Classical Music, Indian Classical Dance, Painting, Sculpture, Drama and Indian Languages may also be considered for admission at the undergraduate level. For undergraduate courses, international students may join any university or a recognised institution. An international student wishing to study Indian languages should join a university or institution as a regular student.
               <br><br>
-              Scholarships under this scheme are available to candidates from Latin American countries and to certain specified European countries: Austria, Brazil, Chile, Costa Rica, Denmark, Nicaragua, Panama, Paraguay, Peru, Switzerland, Surinam, and Uruguay.</p> 
+              Scholarships under this scheme are available to candidates from Latin American countries and to certain specified European countries: Austria, Brazil, Chile, Costa Rica, Denmark, Nicaragua, Panama, Paraguay, Peru, Switzerland, Surinam, and Uruguay.<br><br></p> 
             </li>
             
             <li class="reason">
@@ -104,7 +106,7 @@
                     <li>One year or less</li>
                     <li>Up to two years</li>
                     <li>More than two years</li>
-                </ul></p> 
+                </ul><br><br><a href="https://www.indianhighcommission.com.my/tcscolomboplan.html">Read More</a></p> 
             </li>
 
             <li class="reason">
@@ -114,27 +116,27 @@
                 <br><br>
                 Fellowships and scholarships are offered for studies in areas of Economics, Education, Environment, Agriculture, Mass Communication, Language and Literature, Sociology, Transport Engineering, Applied Economics, Master of Business Administration Programme, Biochemistry, Social Work, Food Technology and Home Science.
                 <br><br>
-                In addition, one Chair is also awarded to a member country on rotation basis. Only such courses, for which no adequate facilities exist in the member countries, are offered for study by the Government of India. The financial terms and conditions are finalised by the SAARC secretariat.</p> 
+                In addition, one Chair is also awarded to a member country on rotation basis. Only such courses, for which no adequate facilities exist in the member countries, are offered for study by the Government of India. The financial terms and conditions are finalised by the SAARC secretariat.<br><br></p> 
             </li>
 
             <li class="reason">
-              <h2><b>Apasaheb Pant Scholarship Scheme</b></h2>
-              <p>Under this scheme one scholarship is offered to a Kenyan national to pursue studies at the postgraduate level, preferably in the field of Economics or International Relations at Jawaharlal Nehru University. Apart from the usual dues, economy class air-fare is also provided.</p> 
+              <h2><b>Appasaheb Pant Scholarship Scheme</b></h2>
+              <p>Under this scheme one scholarship is offered to a Kenyan national to pursue studies at the postgraduate level, preferably in the field of Economics or International Relations at Jawaharlal Nehru University. Apart from the usual dues, economy class air-fare is also provided.<br><br></p> 
             </li>
 
             <li class="reason">
               <h2><b>ICCR Scholarship Scheme</b></h2>
-              <p>The Ministry of External Affairs, Government of India offers ICCR (Indian Council for Cultural Relations) scholarships to the students all over the world. ICCR covers 60 scholarships under its umbrella, offered for undergraduate and post graduate Programmes in Performing and Visual Arts. Subjects include Indian Classical Music, Dance, Painting and Sculpture.</p> 
+              <p>The Ministry of External Affairs, Government of India offers ICCR (Indian Council for Cultural Relations) scholarships to the students all over the world. ICCR covers 60 scholarships under its umbrella, offered for undergraduate and post graduate Programmes in Performing and Visual Arts. Subjects include Indian Classical Music, Dance, Painting and Sculpture.<br><br><a href="http://www.iccr.gov.in/content/africa-scholarships">Read More</a><br><br></p> 
             </li>
 
             <li class="reason">
               <h2><b>Craft Instructors Scheme</b></h2>
-              <p>Under this scheme 10 bursaries are offered annually to nationals of Commonwealth countries for training as craft instructors.</p> 
+              <p>Under this scheme 10 bursaries are offered annually to nationals of Commonwealth countries for training as craft instructors.<br><br><a href="http://dget.nic.in/content/innerpage/crafts-instructor-training-scheme-cits.php">Read More</a><br><br></p> 
             </li>
 
             <li class="reason">
               <h2><b>Scholarship Scheme for Sri Lanka and Mauritius</b></h2>
-              <p>Under this scheme 77 scholarships are offered annually, 47 for Sri Lanka and 30 for Mauritius. These scholarships are for pursuing studies towards under-graduate, post-graduate degrees and for pursuing research towards fulfilment of a Ph.D. degree. Nationals of Sri Lanka can also study specialised subjects such as Agriculture, Engineering and Pharmacy under this scheme.</p> 
+              <p>Under this scheme 77 scholarships are offered annually, 47 for Sri Lanka and 30 for Mauritius. These scholarships are for pursuing studies towards under-graduate, post-graduate degrees and for pursuing research towards fulfilment of a Ph.D. degree. Nationals of Sri Lanka can also study specialised subjects such as Agriculture, Engineering and Pharmacy under this scheme.<br><br><a href="http://www.iccr.gov.in/content/many-other-schemes">Read More</a><br><br></p> 
             </li>
             </ol>
         </div>
@@ -142,138 +144,4 @@
         </div>
     </section>
    <!-- Discription end-->  
-
-  
-    
-
-    <!-- Footer start -->
-    <footer class="irs-footer-field">
-        <div class="container">
-            <div class="row animatedParent animateOnce animateOnce">
-                <div class="col-md-3">
-                    <div class="irs-footer-about">
-                        <img class="irs-foooter-logo" src="images/footer-logo.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtin eiusmodtin didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                        <div class="irs-social">
-                            <a href="about.html#"><i class="icofont icofont-social-facebook"></i></a>
-                            <a href="about.html#"><i class="icofont icofont-social-twitter"></i></a>
-                            <a href="about.html#"><i class="icofont icofont-social-vimeo"></i></a>
-                            <a href="about.html#"><i class="icofont icofont-brand-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="irs-footer-link">
-                        <h4 class="irs-footer-heading">Useful Links</h4>
-                        <ul>
-                            <li><a href="about.html#">Home</a>
-                            </li>
-                            <li><a href="about.html#">About Us</a>
-                            </li>
-                            <li><a href="about.html#">Courses</a>
-                            </li>
-                            <li><a href="about.html#">Teachers</a>
-                            </li>
-                            <li><a href="about.html#">Contact Us</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="irs-footer-tweets">
-                        <h4 class="irs-footer-heading">RECENT TWEETS</h4>
-                        <div class="irs-tweets">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <p><a href="about.html#">@UNIVERSITY</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtin.</p>
-                            <a href="about.html#">about 5 min ago</a>
-                        </div>
-                        <div class="irs-tweets">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <p><a href="about.html#">@UNIVERSITY</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtin.</p>
-                            <a href="about.html#">about 5 min ago</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="irs-footer-contact">
-                        <h4 class="irs-footer-heading">Contact Us</h4>
-                        <img src="images/footer.jpg" alt="">
-                        <div class="irs-mailbox">
-                            <p><i class="zmdi zmdi-email"></i> Mail: yourmail@gmail.com </p>
-                            <p><i class="zmdi zmdi-gps-dot"></i> 678 Zoomtowr, Main road, Canada</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- Footer end -->
-
-    <section class="irs-copyright-field">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="irs-copyright">
-                        <p>Copyright© 2017. Design by <a href="https://themeforest.net/user/irs_soft">irs_soft</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- script start from here -->
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap-dropdownhover.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/jquery-scrolltofixed-min.js"></script>
-    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-    <script type="text/javascript" src="js/css3-animate-it.js"></script>
-    <script type="text/javascript" src="js/bootstrap-slider.js"></script>
-    <script type="text/javascript" src="js/jquery.scrollUp.js"></script>
-    <script type="text/javascript" src="js/classie.js"></script>
-
-    <!-- Custom script for all pages -->
-    <script type="text/javascript" src="js/script.js"></script>
-
-    <!-- Funfact START -->
-    <script type="text/javascript">
-        $(document).ready(function($) {
-            $('.start-count').each(function() {
-                var $this = $(this);
-                $this.data('target', parseInt($this.html()));
-                $this.data('counted', false);
-                $this.html('0');
-            });
-            $(window).bind('scroll', function() {
-                var speed = 3000;
-                $('.start-count').each(function() {
-                    var $this = $(this);
-                    if (!$this.data('counted') && $(window).scrollTop() + $(window).height() >= $this.offset().top) {
-                        $this.data('counted', true);
-                        $this.animate({
-                            dummy: 1
-                        }, {
-                            duration: speed,
-                            step: function(now) {
-                                var $this = $(this);
-                                var val = Math.round($this.data('target') * now);
-                                $this.html(val);
-                                if (0 < $this.parent('.value').length) {
-                                    $this.parent('.value').css('width', val + '%');
-                                }
-                            }
-                        });
-                    }
-                });
-            }).triggerHandler('scroll');
-        });
-    </script>
-
-</body>
-
-</html>
-
-{% endblock %}
+   {% endblock %}
